Voice bugfixes
This should close #31